<resources>
    <string name="app_name">AppFilmes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="app_filmes">App filmes</string>
    <string name="trabalho_da_disciplina">Trabalho da Disciplina</string>
    <string name="menu_aberto">Menu aberto</string>
    <string name="menu_fechado">Menu fechado</string>
    <string name="buscar">Buscar</string>
    <string name="modo_titulo">Modo título</string>
    <string name="modo_id">Modo ID</string>
    <string name="por_favor_aguarde">Por favor, aguarde…</string>
    <string name="entre_com_o_titulo_do_filme">Entre com o titulo do filme</string>
    <string name="entre_com_o_id_do_filme">Entre com o ID do filme</string>
    <string name="erro_ao_buscar_filme" formatted="false">Erro ao buscar filme: %s</string>
    <string name="erro_desconhecido">Erro desconhecido</string>
    <string name="detalhes">Detalhes</string>
    <string name="titulo">Título:</string>
    <string name="ano">Ano:</string>
    <string name="data_lancamento">Data de lançamento:</string>
    <string name="diretor">Diretor:</string>
    <string name="atores">Atores:</string>
    <string name="idioma">Idioma:</string>
    <string name="pais">País:</string>
    <string name="tipo">Tipo:</string>
    <string name="produtora">Produtora:</string>
    <string name="nota_avaliacao">Nota de avaliação:</string>
    <string name="nota_imdb">Nota IMDb:</string>
</resources>
